--- a/ansible_collections/validators/roles/chain_penumbra/templates/appd-alerts.yml.j2
+++ b/ansible_collections/validators/roles/chain_penumbra/templates/appd-alerts.yml.j2
@@ -1,13 +1,13 @@
 groups:
-  - name: penumbra - {{ chain_penumbra_appd_name }} - {{ chain_id }}
+  - name: penumbra - {{ chain_penumbra_appd_name }} - {{ chain_penumbra_chain_id }}
     rules:
 
     - alert: InstanceDown
-      expr: up{job="prometheus.scrape.cosmos_validator_watcher_{{ chain_id | replace('-', '_') }}"} == 0
+      expr: up{job="prometheus.scrape.penumbra_{{ chain_penumbra_appd_name }}_{{ chain_penumbra_chain_id | replace('-', '_') }}"} == 0
       for: 3m
       annotations:
-        title: "Instance prometheus.scrape.cosmos_validator_watcher_{{ chain_id | replace('-', '_') }} down"
-        description: "prometheus.scrape.cosmos_validator_watcher_{{ chain_id | replace('-', '_') }} has been down for more than 3 minutes"
+        title: "Instance prometheus.scrape.penumbra_{{ chain_penumbra_appd_name }}_{{ chain_penumbra_chain_id | replace('-', '_') }} down"
+        description: "Prometheus instance has been down for more than 3 minutes"
       labels:
         severity: critical
         service: validator
@@ -21,4 +21,4 @@ groups:
         service: validator
         component: penumbra-pd
       annotations:
-        description: "Chain `{{ chain_id }}` validator  is missing `{{ $value }}` blocks!{% endraw %}"
+        description: "Chain `{{ chain_penumbra_chain_id }}` validator  is missing {% raw %}`{{ $value }}` blocks!{% endraw %}"
