--- a/ansible_collections/validators/roles/chain_celestia/templates/bridge-alerts.yml.j2
+++ b/ansible_collections/validators/roles/chain_celestia/templates/bridge-alerts.yml.j2
@@ -2,30 +2,30 @@ groups:
   - name: celestia-bridge-{{ chain_celestia_chain_id }}
     rules:
     - alert: TooFewPeers
-      expr: celestia_full_discovery_amount_of_peers{service_namespace="celestia"} < 2
-      for: 5m
+      expr: celestia_full_discovery_amount_of_peers{service_namespace="{{ chain_celestia_chain_id }}"} < 2
+      for: 15m
       labels:
         severity: major
       annotations:
         description: 'Celestia-bridge chain_id: `{{ chain_celestia_chain_id }}` / The number of connected P2P peers has been below the defined threshold in the last 5 minutes.'
 
     - alert: NoArchivalPeers
-      expr: celestia_archival_discovery_amount_of_peers{service_namespace="celestia"} < 2
-      for: 5m
+      expr: celestia_archival_discovery_amount_of_peers{service_namespace="{{ chain_celestia_chain_id }}"} < 2
+      for: 15m
       labels:
         severity: major
       annotations:
         description: 'Celestia-bridge chain_id: `{{ chain_celestia_chain_id }}` / The node is not connected to any archival peers'
 
     - alert: StalledBlocks
-      expr: increase(celestia_hdr_sync_subjective_head_gauge{service_namespace="celestia"}[5m]) == 0
+      expr: increase(celestia_hdr_sync_subjective_head_gauge{service_namespace="{{ chain_celestia_chain_id }}"}[15m]) == 0
       labels:
         severity: critical
       annotations:
         description: 'Celestia-bridge chain_id: `{{ chain_celestia_chain_id }}` / Block production stalled. The node has not produced any blocks in the last 5 minutes.'
 
     - alert: NoReceiverMetricPoints
-      expr: increase(otelcol_receiver_accepted_metric_points[5m]) == 0
+      expr: increase(otelcol_receiver_accepted_metric_points[15m]) == 0
       labels:
         severity: critical
       annotations:
@@ -33,16 +33,16 @@ groups:
 
     - alert: InstanceDown
       expr: up{job="prometheus.scrape.celestia_da_otel_collector_da_{{ chain_celestia_chain_id }}"} == 0
-      for: 1m
+      for: 15m
       labels:
         severity: critical
       annotations:
         description: "Celestia-bridge chain_id: `{{ chain_celestia_chain_id }}` / Instance has been down for more than 1 minute."
 
     - alert: OutOfSync
-      expr: sum by (instance)(celestia_hdr_sync_subjective_head_gauge{service_namespace="celestia"}) - sum by (instance)(celestia_hdr_store_head_height_gauge{service_namespace="celestia"}) > 2
-      for: 5m
+      expr: sum by (instance)(celestia_hdr_sync_subjective_head_gauge{service_namespace="{{ chain_celestia_chain_id }}"}) - sum by (instance)(celestia_hdr_store_head_height_gauge{service_namespace="{{ chain_celestia_chain_id }}"}) > 2
+      for: 15m
       labels:
         severity: critical
       annotations:
-        description: "Celestia-bridge chain_id: `{{ chain_celestia_chain_id }}` / Node is out of sync for more than 5 minutes."
+        description: "Celestia-bridge chain_id: `{{ chain_celestia_chain_id }}` / Node is out of sync for more than 15 minutes."
