--- a/ansible_collections/validators/roles/chain_celestia/templates/justfile.j2
+++ b/ansible_collections/validators/roles/chain_celestia/templates/justfile.j2
@@ -11,119 +11,123 @@ default:
     @just --list
 
 # Variables
-{% if chain_celestia_bridge is defined and chain_celestia_bridge | bool %}
-bridge_app_service := "bridge-celestia-app-{{ chain_celestia_chain_id }}"
-bridge_node_service := "bridge-celestia-node-{{ chain_celestia_chain_id }}"
+{% if chain_celestia_appd is defined and chain_celestia_appd | bool %}
+appd_service := "appd-{{ chain_celestia_chain_id }}"
 {% endif %}
-{% if chain_celestia_validator is defined and chain_celestia_validator | bool %}
-validator_app_service := "appd-{{ chain_celestia_chain_id }}"
+{% if chain_celestia_bridge is defined and chain_celestia_bridge | bool %}
+bridge_node_service := "celestia-bridge-{{ chain_celestia_chain_id }}"
+{% endif %}
+{% if chain_celestia_tmkms is defined and chain_celestia_tmkms | bool %}
+tmkms_service := "tmkms-{{ chain_celestia_chain_id }}"
 {% endif %}
 log_lines := "100"
 
+{% if chain_celestia_appd is defined and chain_celestia_appd | bool %}
+# Start appd_service systemd service
+appd-start:
+    @echo "Starting {% raw %}{{ appd_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl start {% raw %}{{ appd_service }}.service
+{% endraw %}
+    @sleep 2
+    @just appd-status
+
+# Stop appd_service systemd service
+appd-stop:
+    @echo "Stopping {% raw %}{{ appd_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl stop {% raw %}{{ appd_service }}.service
+{% endraw %}
+    @sleep 2
+    @just appd-status
+
+# Restart appd_service systemd service
+appd-restart:
+    @echo "Restarting {% raw %}{{ appd_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl restart {% raw %}{{ appd_service }}.service
+{% endraw %}
+    @sleep 2
+    @just appd-status
+
+# Check appd_service systemd service status
+appd-status:
+    @echo "{% raw %}{{ appd_service }}{% endraw %} status:"
+    sudo /usr/bin/systemctl status {% raw %}{{ appd_service }}.service
+{% endraw %}
+
+# Consult appd_service systemd service logs
+appd-logs:
+    journalctl --unit={% raw %}{{ appd_service }} --follow
+{% endraw %}
+
+{% endif %}
 {% if chain_celestia_bridge is defined and chain_celestia_bridge | bool %}
-# Start bridge-celestia-app systemd service
-start-bridge-app:
-    @echo "Starting {% raw %}{{ bridge_app_service }}{% endraw %}..."
-    sudo /usr/bin/systemctl start {% raw %}{{ bridge_app_service }}.service
-{% endraw %}
-    @sleep 2
-    @just status-bridge-app
-
-# Stop bridge-celestia-app systemd service
-stop-bridge-app:
-    @echo "Stopping {% raw %}{{ bridge_app_service }}{% endraw %}..."
-    sudo /usr/bin/systemctl stop {% raw %}{{ bridge_app_service }}.service
-{% endraw %}
-    @sleep 2
-    @just status-bridge-app
-
-# Restart bridge-celestia-app systemd service
-restart-bridge-app:
-    @echo "Restarting {% raw %}{{ bridge_app_service }}{% endraw %}..."
-    sudo /usr/bin/systemctl restart {% raw %}{{ bridge_app_service }}.service
-{% endraw %}
-    @sleep 2
-    @just status-bridge-app
-
-# Check bridge-celestia-app systemd service status
-status-bridge-app:
-    @echo "{% raw %}{{ bridge_app_service }}{% endraw %} status:"
-    sudo /usr/bin/systemctl status {% raw %}{{ bridge_app_service }}.service
-{% endraw %}
-
-# Consult bridge-celestia-node systemd service logs
-logs-bridge-app:
-    journalctl --unit={% raw %}{{ bridge_app_service }} --follow
-{% endraw %}
-
-# Start bridge-celestia-node systemd service
-start-bridge-node:
+# Start bridge systemd service
+bridge-start:
     @echo "Starting {{ chain_celestia_network }}..."
     sudo /usr/bin/systemctl start {% raw %}{{ bridge_node_service }}.service
 {% endraw %}
     @sleep 2
-    @just status-bridge-node
+    @just bridge-status
 
-# Stop bridge-celestia-node systemd service
-stop-bridge-node:
+# Stop bridge systemd service
+bridge-stop:
     @echo "Stopping {% raw %}{{ bridge_node_service }}{% endraw %}..."
     sudo /usr/bin/systemctl stop {% raw %}{{ bridge_node_service }}.service
 {% endraw %}
     @sleep 2
-    @just status-bridge-node
-# Restart bridge-celestia-node systemd service
-restart-bridge-node:
+    @just bridge-status
+# Restart bridge systemd service
+bridge-restart:
     @echo "Restarting {% raw %}{{ bridge_node_service }}{% endraw %}..."
     sudo /usr/bin/systemctl restart {% raw %}{{ bridge_node_service }}.service
 {% endraw %}
     @sleep 2
-    @just status-bridge-node
+    @just bridge-status
 
-# Check bridge-celestia-node systemd service status
-status-bridge-node:
+# Check bridge systemd service status
+bridge-status:
     @echo "{% raw %}{{ bridge_node_service }}{% endraw %} status:"
     sudo /usr/bin/systemctl status {% raw %}{{ bridge_node_service }}.service
 {% endraw %}
 
-# Consult bridge-celestia-node systemd service logs
-logs-bridge-node:
+# Consult bridge systemd service logs
+bridge-logs:
     journalctl --unit={% raw %}{{ bridge_node_service }} --follow
 {% endraw %}
 {% endif %}
 
-{% if chain_celestia_validator is defined and chain_celestia_validator | bool %}
-# Start {validator-celestia-app systemd service
-start-validator-app:
-    @echo "Starting {% raw %}{{ validator_app_service }}{% endraw %}..."
-    sudo /usr/bin/systemctl start {% raw %}{{ validator_app_service }}.service
+{% if chain_celestia_tmkms is defined and chain_celestia_tmkms | bool %}
+# Start tmkms systemd service
+tmkms-start:
+    @echo "Starting {% raw %}{{ tmkms_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl start {% raw %}{{ tmkms_service }}.service
 {% endraw %}
     @sleep 2
-    @just status-validator-app
+    @just tmkms-status
 
-# Stop validator-celestia-app systemd service
-stop-validator-app:
-    @echo "Stopping {% raw %}{{ validator_app_service }}{% endraw %}..."
-    sudo /usr/bin/systemctl stop {% raw %}{{ validator_app_service }}.service
+# Stop tmkms systemd service
+tmkms-stop:
+    @echo "Stopping {% raw %}{{ tmkms_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl stop {% raw %}{{ tmkms_service }}.service
 {% endraw %}
     @sleep 2
-    @just status-validator-app
+    @just tmkms-status
 
-# Restart validator-celestia-app systemd service
-restart-validator-app:
-    @echo "Restarting {% raw %}{{ validator_app_service }}{% endraw %}..."
-    sudo /usr/bin/systemctl restart {% raw %}{{ validator_app_service }}.service
+# Restart tmkms systemd service
+tmkms-restart:
+    @echo "Restarting {% raw %}{{ tmkms_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl restart {% raw %}{{ tmkms_service }}.service
 {% endraw %}
     @sleep 2
-    @just status-validator-app
+    @just tmkms-status
 
-# Check validator-celestia-app systemd service status
-status-validator-app:
-    @echo "{% raw %}{{ validator_app_service }}{% endraw %} status:"
-    sudo /usr/bin/systemctl status {% raw %}{{ validator_app_service }}.service
+# Check tmkms systemd service status
+tmkms-status:
+    @echo "{% raw %}{{ tmkms_service }}{% endraw %} status:"
+    sudo /usr/bin/systemctl status {% raw %}{{ tmkms_service }}.service
 {% endraw %}
 
-# Consult validator-celestia-app systemd service logs
-logs-validator-app:
-    journalctl --unit={% raw %}{{ validator_app_service }} --follow
+# Consult tmkms systemd service logs
+tmkms-logs:
+    journalctl --unit={% raw %}{{ tmkms_service }} --follow
 {% endraw %}
 {% endif %}
