--- a/ansible_collections/validators/roles/chain_nillion/templates/justfile.j2
+++ b/ansible_collections/validators/roles/chain_nillion/templates/justfile.j2
@@ -11,40 +11,40 @@ default:
     @just --list
 
 # Variables
-validator_service := "{{ chain_nillion_binary_name }}-{{ chain_nillion_network }}.service"
+validator_service := "appd-{{ chain_nillion_chain_id }}.service"
 log_lines := "100"
 
-# Start {{ chain_nillion_binary_name }}-{{ chain_nillion_network }} systemd service
+# Start appd-{{ chain_nillion_chain_id }} systemd service
 start:
-    @echo "Starting {{ chain_nillion_binary_name }}-{{ chain_nillion_network }}..."
+    @echo "Starting appd-{{ chain_nillion_chain_id }}..."
     sudo /usr/bin/systemctl start {% raw %}{{ validator_service }}
 {% endraw %}
     @sleep 2
     @just status
 
-# Stop {{ chain_nillion_binary_name }}-{{ chain_nillion_network }} systemd service
+# Stop appd-{{ chain_nillion_chain_id }} systemd service
 stop:
-    @echo "Stopping {{ chain_nillion_binary_name }}-{{ chain_nillion_network }}..."
+    @echo "Stopping appd-{{ chain_nillion_chain_id }}..."
     sudo /usr/bin/systemctl stop {% raw %}{{ validator_service }}
 {% endraw %}
     @sleep 2
     @just status
 
-# Restart {{ chain_nillion_binary_name }}-{{ chain_nillion_network }} systemd service
+# Restart appd-{{ chain_nillion_chain_id }} systemd service
 restart:
-    @echo "Restarting {{ chain_nillion_binary_name }}-{{ chain_nillion_network }}..."
+    @echo "Restarting appd-{{ chain_nillion_chain_id }}..."
     sudo /usr/bin/systemctl restart {% raw %}{{ validator_service }}
 {% endraw %}
     @sleep 2
     @just status
 
-# Check {{ chain_nillion_binary_name }}-{{ chain_nillion_network }} systemd service status
+# Check appd-{{ chain_nillion_chain_id }} systemd service status
 status:
-    @echo "{{ chain_nillion_binary_name }}-{{ chain_nillion_network }} status:"
+    @echo "appd-{{ chain_nillion_chain_id }} status:"
     sudo /usr/bin/systemctl status {% raw %}{{ validator_service }}
 {% endraw %}
 
-# Consult {{ chain_nillion_binary_name }}-{{ chain_nillion_network }} systemd service logs
+# Consult appd-{{ chain_nillion_chain_id }} systemd service logs
 logs:
     journalctl --unit={% raw %}{{ validator_service }} --follow
 {% endraw %}
